--- a/donaciones.html
+++ b/donaciones.html
@@ -17,7 +17,8 @@
     </article>
     <footer>
         <div>
-            <p>GuauMiau</p>
+            <p>Boulevard Belisario Domínguez Km 1081, sn, Terán, Tuxtla Gutíerrez, Chiapas, México</p>
+            <p>&copy; GuauMiau Derechos reservados 2023</p>
         </div>
     </footer>
 </body>
