--- a/donaciones.html
+++ b/donaciones.html
@@ -26,7 +26,7 @@
     <article>
         <p>Por favor, complete el formulario a continuación para realizar su donación.</p>
     </article>
-    <form method="POST" action="por definir">
+    <form method="POST" action="pago.php">
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" name="nombre" required><br><br>
     
