--- a/capacitacion.html
+++ b/capacitacion.html
@@ -9,6 +9,15 @@
 	<header>
 		<h1>Capacitación sobre el cuidado de las mascotas</h1>
 		<nav>
+			<li><a href="index.html">Inicio</a></li>
+            <li><a href="informacion.html">Información</a></li>
+            <li><a href="capacitacion.html">Capacitación</a></li>
+            <li><a href="donaciones.html">Donaciones</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+		</nav>
+		<br>
+		<br>
+		<nav>
 			<ul>
 				<li><a href="#introduccion">Introducción</a></li>
 				<li><a href="#por-que-es-importante">Por qué es importante</a></li>
