--- a/informacion.html
+++ b/informacion.html
@@ -25,8 +25,33 @@
     </header>
     <article>
         <section>
+            <br><br>
             <H1>Historia</H1>
-            <p></p>
+            <p>
+                Había una vez en una colonia popular, un grupo de amigos que se preocupaban por la 
+                cantidad de animales ferales que habitaban las calles. Roselia, Carolina, Arturo, 
+                Lisandro y Nahum eran cinco compañeros con habilidades diferentes pero con un mismo 
+                propósito: disminuir la cantidad de animales abandonados en la calle y ayudar al 
+                ambiente.
+            </p>
+            <br>
+            <p>
+                Roselia, la tímida, era una amante de los animales desde niña y siempre se preocupaba 
+                por el bienestar de los gatos y perros que se encontraba en su camino. Carolina, la 
+                sexy, era una persona muy carismática y sabía cómo llamar la atención de las personas. 
+                Arturo, el jefe, era una persona muy organizada y líder nato. Lisandro, el violento, era 
+                una persona un poco agresiva, pero su pasión por los animales lo hacía actuar de manera 
+                protectora. Finalmente, Nahum, el raro, era un amante de la tecnología y las aplicaciones 
+                web.
+            </p>
+            <br>
+            <p>
+                Un día, después de ver a varios animales abandonados en la calle, el grupo decidió 
+                formar una organización sin fines de lucro llamada "Guaumiau". La organización se 
+                enfocaría en utilizar herramientas tecnológicas y aplicaciones web para poder ayudar a 
+                los animales ferales de las colonias populares.
+            </p>
+            <br><br>
         </section>
         <section>
             <h1>Misión</h1>
@@ -41,7 +66,21 @@
                 también se podrían llevar a cabo campañas de concientización sobre la importancia
                 de mantener a las mascotas bajo control para evitar la contaminación y el daño al
                 medio ambiente.
-                </p>
+            </p>
+            <br>
+        </section>
+        <section>
+            <h1>Visión</h1>
+            <img src="" alt="">
+            <p>
+                La visión de "Guaumiau" es lograr una sociedad en la que todos los animales tengan un 
+                hogar seguro y amoroso. Queremos ser una organización líder en el cuidado y protección 
+                de los animales ferales de las colonias populares, utilizando herramientas tecnológicas 
+                y aplicaciones web para facilitar el proceso de adopción y cuidado de los animales. 
+                Nuestra visión es crear una comunidad comprometida con el bienestar animal, en la que 
+                los animales sean valorados y respetados como seres vivos que merecen amor y cuidado.
+            </p>
+            <br>
         </section>
         <aside>
 
