--- a/capacitacion.html
+++ b/capacitacion.html
@@ -25,6 +25,7 @@
 				<li><a href="#metodologia">Metodología</a></li>
 				<li><a href="#recursos">Recursos</a></li>
 				<li><a href="#contacto">Contacto</a></li>
+				<li><a href="login.php">Ingresar</a></li>
 			</ul>
 		</nav>
 	</header>
