--- a/informacion.html
+++ b/informacion.html
@@ -20,6 +20,7 @@
                 <li><a href="capacitacion.html">Capacitación</a></li>
                 <li><a href="donaciones.html">Donaciones</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="login.php">Ingresar</a></li>
             </ul>
         </nav>
     </header>
@@ -87,7 +88,10 @@
         </aside>
     </article>
     <footer>
-
+        <div>
+            <p>Boulevard Belisario Domínguez Km 1081, sn, Terán, Tuxtla Gutíerrez, Chiapas, México</p>
+            <p>&copy; GuauMiau Derechos reservados 2023</p>
+        </div>
     </footer>
 </body>
 </html>
