--- a/contacto.html
+++ b/contacto.html
@@ -22,6 +22,7 @@
                 <li><a href="capacitacion.html">Capacitación</a></li>
                 <li><a href="donaciones.html">Donaciones</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="login.php">Ingresar</a></li>
             </ul>
         </nav>
     </header>
